# raglib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: USAGE.md
examples/: check_all_rag_types.py  local_ollama_chroma_test.py
examples/reports/: all_rag_types_full_output_20260404_174749.json  all_rag_types_full_output_20260404_174749.md
raglib/: __init__.py  config.py  constants.py  facade.py  main.py  schemas.py
raglib/components/: __init__.py  context_reducer.py  decision.py  deduplicator.py  evaluator.py  generator.py  hybrid_retriever.py  memory.py  multi_hop_retriever.py  multi_query_retriever.py  planner.py  query_expander.py  query_rewriter.py  refiner.py  reflection.py  reranker.py  retriever.py  router_retriever.py  web_retriever.py
raglib/core/: __init__.py  base.py
raglib/embedding/: __init__.py  base_embedding.py  embedding_factory.py  google_embedding.py  huggingface_embedding.py  mock_embedding.py  ollama_embedding.py  openai_embedding.py
raglib/llm/: __init__.py  base_client.py  constants.py  langchain_adapter.py  mock_client.py  provider_detector.py
raglib/loaders/: __init__.py  chunk_splitter.py  document_loader.py  exceptions.py  pdf_loader.py  plain_text_loader.py  powerpoint_loader.py  pptx_loader.py  text_loader.py  web_loader.py  webpage_loader.py  word_loader.py
raglib/preprocessing/: __init__.py  chunk_splitter.py
raglib/providers/: __init__.py  base_provider.py  bing_provider.py  brave_provider.py  duckduckgo_provider.py  exa_provider.py  google_cse_provider.py  searxng_provider.py  serpapi_provider.py  tavily_provider.py
raglib/rag_types/: __init__.py  advanced_rag.py  agentic_rag.py  corrective_rag.py  hybrid_rag.py  memory_rag.py  multi_hop_rag.py  multi_query_rag.py  naive_rag.py  routing_rag.py  self_rag.py  tool_augmented_rag.py  web_rag.py
raglib/session/: __init__.py  interactive.py
raglib/vectorstores/: __init__.py  base_store.py  chroma_store.py  factory.py  in_memory_store.py
raglib/vision/: __init__.py  anthropic_vision.py  base_vision.py  google_vision.py  mock_vision.py  openai_vision.py  vision_factory.py
tests/e2e/: test_facade_api.py
