[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "raglib"
version = "0.1.2"
description = "A modular, production-grade Retrieval-Augmented Generation library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "raglib maintainers" }
]
requires-python = ">=3.9"
dependencies = [
  "duckduckgo-search>=3.9"
]
keywords = ["rag", "llm", "retrieval", "ai", "nlp", "vector-search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yourname/raglib"
Repository = "https://github.com/yourname/raglib"
"Bug Tracker" = "https://github.com/yourname/raglib/issues"

[project.optional-dependencies]
tavily = ["tavily-python>=0.2.0"]
serpapi = ["google-search-results>=2.4.0"]
faiss = ["faiss-cpu>=1.7.0"]
chroma = ["chromadb>=0.5.0"]
openai = ["langchain-openai>=0.1.0"]
anthropic = ["langchain-anthropic>=0.1.0"]
groq = ["langchain-groq>=0.1.0"]
google = ["langchain-google-genai>=1.0.0"]
ollama = ["langchain-ollama>=0.1.0"]
langchain = ["langchain-core>=0.2.0"]
pdf = ["PyMuPDF>=1.23.0"]
docx = ["python-docx>=1.0.0"]
pptx = ["python-pptx>=0.6.21"]
free-embed = ["langchain-huggingface>=0.0.3", "sentence-transformers>=2.6.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0"]
vision = [
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-google-genai>=1.0.0",
]
all-llm = [
  "langchain-core>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-groq>=0.1.0",
  "langchain-google-genai>=1.0.0",
  "langchain-ollama>=0.1.0",
]
all = [
  "chromadb>=0.5.0",
  "langchain-core>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-groq>=0.1.0",
  "langchain-google-genai>=1.0.0",
  "langchain-ollama>=0.1.0",
  "langchain-huggingface>=0.0.3",
  "sentence-transformers>=2.6.0",
  "PyMuPDF>=1.23.0",
  "python-docx>=1.0.0",
  "python-pptx>=0.6.21",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "build>=1.0.0",
  "twine>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["raglib"]

[tool.hatch.build.targets.sdist]
include = [
  "raglib/**/*.py",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
